fix meadiaq about cv section tablet desktop

--- a/src/scss/pages/_about.scss
+++ b/src/scss/pages/_about.scss
@@ -1,14 +1,26 @@
 .main_about {
     padding: 5rem;
-    display: flex;
-    //width: 100%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    
     line-height: 1.7rem;
     text-align: justify;
 
+   
+
 }
+
+.main_wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    @media (min-width: 768px) {
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: flex-start;
+    }
+}
+
+
 .main_about_title {
     //display: inline;
     align-self: flex-start;
@@ -32,6 +44,10 @@
     font-size: 1.5rem;
     padding-bottom: 1.2rem;
     padding-top: 0.5rem;
+}
+
+.languages_list_element {
+    width: 25%;
 }
 
 .profile-paragraph {
@@ -72,7 +88,8 @@
 .wrapper_about_left {
     @media (min-width: 768px) { 
         width: 50%;
-        display: flex;
+        max-width: 30rem;
+        padding: 1rem;
     }
     
 }
@@ -80,6 +97,8 @@
 .wrapper_about_right {
     @media (min-width: 768px) { 
         width: 50%;
+        max-width: 30rem;
+        padding: 1rem;
     }
    
     
