--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -1,4 +1,8 @@
 .main_contact {
     flex-direction: column;
     padding: 5rem;
+
+    background-color: var(--main-bg-color);
+    font-family: var(--regular-text-font);
+    color: var(--regular-text-color);
 }
